--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.22.20",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
