--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "compute-map",
+  "version": "0.0.2",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch"
@@ -15,6 +17,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "geojson-validation": "^1.0.2",
     "mapbox-gl": "^3.7.0"
   }
 }
