HA-775 / Compute map - user cannot click on the cluster icon when it’s over another cluster (#12)
* hide clusters and points in a radius of expanded cluster

* add fade-in effect for clusters

* remove unnecessary logic in fade animations

* reset filter on cluster click

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compute-map",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch"
@@ -17,6 +17,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@turf/turf": "^7.1.0",
     "geojson-validation": "^1.0.2",
     "mapbox-gl": "2.15.0"
   }
